--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 <body>
    <h1>Привет мир</h1>
 <h2> 19 декабря , 2025</h2>
-<p><a href="Поздравление_с_Рождеством.odt">Поздравляю с наступающим Рождеством 2026!</a></p>
-</body>
-</html>
+<p><a Поздравляю с наступающим рождеством 2026</p>
+<h1><p class="quote"> Cмотреть <a href="nowTree.mp4">видео.</a> </h1>
+<p><a href="Поздравление_с_Рождеством.pdf">Поздравляю с наступающим Рождеством 2026!</a></p>
+
+<h2><p class="quote> 13 января, 2026</h2>
+   <p> Полное доменное имя: mau12345678.github.10 <p/>
+   <p> 1. Корневой домен: - <p/>
+   <p> 2. Первый уровень: - 10 <p/>
+   <p> 3. Второй уровень: - github.10 </p>
+   <p> 4. Судомен: - mau12345678.github.10 </p>
+
+<body>
+   <h2><p class="quote"> 16 января , 2026</h2>
+   </p>Опрелелить ключи шифра Цезаря, если известны следующие пары открытый текст - шифротекст:
+   </p>a. АПЕЛЬСИН - САЦЬНВЩО (k = 17)</p>
+   </p>бю АБРИКОС - ЫЬЛЕЙМ. (k = 27)</p>
+
+   <p>Расшифровка сообщений, зашифрованных шифром Цезаря с неизвестным ключом k , 0 < k < 32: </p>
+   </p>а.ФХНЗКЧ - ПРИВЕТ (k =5)</body>p>
+   </p>б.ЦЩЕБФ - ВЕСНА (k = 20)<p></p>
